# numerai-open-models

./: .env.sample  .gitignore  Dockerfile  Dockerfile.crypto  Dockerfile.pkl_tournament  Dockerfile.signals  build_and_push.ps1.sample  build_and_push.sh.sample  build_and_push_crypto.ps1.sample  build_and_push_pkl_tournament.sample.ps1  build_and_push_signals.ps1.sample  pyproject.toml  readme.md  requirements_numerai_predict.txt  run_batch.py  signals_ticker_map_w_bbg.csv  yfinance_sector_industry.csv
function/: main.py  requirements.txt
model/: model.py  requirements.txt
models/crypto_open_model_1/: model.py  readme.md  requirements.txt
models/crypto_open_model_2/: model.py  readme.md  requirements.txt
models/open_model_1/: model.py  readme.md  requirements.txt
models/open_model_10/: model.py  readme.md
models/open_model_11/: model.py  readme.md
models/open_model_2/: model.py  readme.md  requirements.txt
models/open_model_3/: model.py  readme.md  requirements.txt
models/open_model_4/: model.py  readme.md  requirements.txt
models/open_model_5/: model.py  readme.md  requirements.txt
models/open_model_6/: model.py  readme.md
models/open_model_7/: model.py  readme.md  requirements.txt
models/open_model_8/: model.py  readme.md  requirements.txt
models/open_model_9/: model.py  readme.md
models/signals_open_model_1/: model.py  readme.md  requirements.txt
models/signals_open_model_2/: model.py  readme.md  requirements.txt
